--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<!-- Slick -->
-	<link rel="stylesheet" type="text/css" href="/user/slick/slick/slick.css" />
-	<link rel="stylesheet" type="text/css" href="/user/slick/slick/slick-theme.css" />
+	<link rel="stylesheet" type="text/css" href="../user/slick/slick/slick.css" />
+	<link rel="stylesheet" type="text/css" href="../user/slick/slick/slick-theme.css" />
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="/user/css/global.css">
-	<link rel="stylesheet" type="text/css" href="/user/css/style.css">
-	<link rel="stylesheet" type="text/css" href="/user/css/responsive.css">
+	<link rel="stylesheet" type="text/css" href="../user/css/global.css">
+	<link rel="stylesheet" type="text/css" href="../user/css/style.css">
+	<link rel="stylesheet" type="text/css" href="../user/css/responsive.css">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -25,18 +25,18 @@
 		<header class="">
 			<nav class="container">
 				<div class="logo">
-					<a href="index.html"><img src="/user/images/AnhCat/logo.png" alt="Xưởng mộc giá tốt hoàng hoan"></a>
+					<a href="index.html"><img src="../user/images/AnhCat/logo.png" alt="Xưởng mộc giá tốt hoàng hoan"></a>
 				</div>
 				<div class="menu" data-show="0">
 					<div class="d-flex h-100 justify-content-center align-items-center">
 						<ul>
 							<li class="active"><a href="index.html"> Trang chủ </a></li>
-							<li><a href="/user/about.html"> Giới thiệu </a></li>
-							<li><a href="/user/product.html"> Sản phẩm </a></li>
-							<li><a href="/user/news.html"> Tin tức </a></li>
-							<li><a href="/user/partner.html"> Đối tác </a></li>
-							<li><a href="/user/contact.html"> Liên hệ </a></li>
-							<li><a href="/user/login.html"> Đăng Nhập </a></li>
+							<li><a href="../user/about.html"> Giới thiệu </a></li>
+							<li><a href="../user/product.html"> Sản phẩm </a></li>
+							<li><a href="../user/news.html"> Tin tức </a></li>
+							<li><a href="../user/partner.html"> Đối tác </a></li>
+							<li><a href="../user/contact.html"> Liên hệ </a></li>
+							<li><a href="../user/login.html"> Đăng Nhập </a></li>
 						</ul>
 					</div>
 				</div>
@@ -56,7 +56,7 @@
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="/user/images/AnhCat/banner.png" class="d-block w-100" alt="...">
+						<img src="../user/images/AnhCat/banner.png" class="d-block w-100" alt="...">
 						<div class="content-box-banner">
 							<h2 class="text-uppercase header-banner">
 								THẾ GIỚI NỘI THẤT <br> <span> HT Houseware </span>
@@ -70,7 +70,7 @@
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="/user/images/AnhCat/banner1.png" class="d-block w-100" alt="...">
+						<img src="../user/images/AnhCat/banner1.png" class="d-block w-100" alt="...">
 						<div class="content-box-banner">
 							<h2 class="text-uppercase header-banner">
 								THẾ GIỚI NỘI THẤT <br> <span> HT Houseware </span>
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="/user/images/AnhCat/banner.png" class="d-block w-100" alt="...">
+						<img src="../user/images/AnhCat/banner.png" class="d-block w-100" alt="...">
 						<div class="content-box-banner">
 							<h2 class="text-uppercase header-banner">
 								THẾ GIỚI NỘI THẤT <br> <span> HT Houseware </span>
@@ -114,7 +114,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/phong-ngu.png" alt="PHÒNG KHÁCH" class="img-cate">
+							<img src="../user/images/AnhCat/phong-ngu.png" alt="PHÒNG KHÁCH" class="img-cate">
 						</div>
 						<p> PHÒNG KHÁCH </p>
 					</a>
@@ -122,7 +122,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/phong-khach.png" alt="PHÒNG NGỦ" class="img-cate">
+							<img src="../user/images/AnhCat/phong-khach.png" alt="PHÒNG NGỦ" class="img-cate">
 						</div>
 						<p> PHÒNG NGỦ </p>
 					</a>
@@ -130,7 +130,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/phong-bep.png" alt="PHÒNG BẾP" class="img-cate">
+							<img src="../user/images/AnhCat/phong-bep.png" alt="PHÒNG BẾP" class="img-cate">
 						</div>
 						<p> PHÒNG BẾP </p>
 					</a>
@@ -138,7 +138,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/phong-tam.png" alt="PHÒNG TẮM" class="img-cate">
+							<img src="../user/images/AnhCat/phong-tam.png" alt="PHÒNG TẮM" class="img-cate">
 						</div>
 						<p> PHÒNG TẮM </p>
 					</a>
@@ -146,7 +146,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/tre-em.png" alt="TRẺ EM" class="img-cate">
+							<img src="../user/images/AnhCat/tre-em.png" alt="TRẺ EM" class="img-cate">
 						</div>
 						<p> TRẺ EM </p>
 					</a>
@@ -154,7 +154,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/van-phong.png" alt="VĂN PHÒNG" class="img-cate">
+							<img src="../user/images/AnhCat/van-phong.png" alt="VĂN PHÒNG" class="img-cate">
 						</div>
 						<p> VĂN PHÒNG </p>
 					</a>
@@ -162,7 +162,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/cau-thang.png" alt="CẦU THANG" class="img-cate">
+							<img src="../user/images/AnhCat/cau-thang.png" alt="CẦU THANG" class="img-cate">
 						</div>
 						<p> CẦU THANG </p>
 					</a>
@@ -170,7 +170,7 @@
 				<div class="category-item">
 					<a href="#">
 						<div class="category-img">
-							<img src="/user/images/AnhCat/den-trang-tri.png" alt="ĐÈN TRANG TRÍ" class="img-cate">
+							<img src="../user/images/AnhCat/den-trang-tri.png" alt="ĐÈN TRANG TRÍ" class="img-cate">
 						</div>
 						<p> ĐÈN TRANG TRÍ </p>
 					</a>
@@ -184,7 +184,7 @@
 				<div class="slide-prd">
 					<div class="product">
 						<div class="img">
-							<img src="/user/images/AnhCat/sp-1.png" alt="Giường Châu Âu" class="img-fluid">
+							<img src="../user/images/AnhCat/sp-1.png" alt="Giường Châu Âu" class="img-fluid">
 						</div>
 						<div class="info">
 							<p class="name"><a href="#">Giường Châu Âu</a></p>
@@ -207,7 +207,7 @@
 
 					<div class="product">
 						<div class="img">
-							<img src="/user/images/AnhCat/sp-2.png" alt="bàn làm việc" class="img-fluid">
+							<img src="../user/images/AnhCat/sp-2.png" alt="bàn làm việc" class="img-fluid">
 						</div>
 						<div class="info">
 							<p class="name"><a href="#">bàn làm việc</a> </p>
@@ -230,7 +230,7 @@
 
 					<div class="product">
 						<div class="img">
-							<img src="/user/images/AnhCat/sp-3.png" alt="Tủ quần áo" class="img-fluid">
+							<img src="../user/images/AnhCat/sp-3.png" alt="Tủ quần áo" class="img-fluid">
 						</div>
 						<div class="info">
 							<p class="name"><a href="#"> Tủ quần áo</a> </p>
@@ -253,7 +253,7 @@
 
 					<div class="product">
 						<div class="img">
-							<img src="/user/images/AnhCat/sp-4.png" alt="Kệ để đồ" class="img-fluid">
+							<img src="../user/images/AnhCat/sp-4.png" alt="Kệ để đồ" class="img-fluid">
 						</div>
 						<div class="info">
 							<p class="name"><a href="#">Kệ để đồ</a> </p>
@@ -276,7 +276,7 @@
 
 					<div class="product">
 						<div class="img">
-							<img src="/user/images/AnhCat/sp-1.png" alt="Tủ quần áo" class="img-fluid">
+							<img src="../user/images/AnhCat/sp-1.png" alt="Tủ quần áo" class="img-fluid">
 						</div>
 						<div class="info">
 							<p class="name"><a href="#"> Tủ quần áo</a> </p>
@@ -299,7 +299,7 @@
 
 					<div class="product">
 						<div class="img">
-							<img src="/user/images/AnhCat/sp-2.png" alt="Tủ quần áo" class="img-fluid">
+							<img src="../user/images/AnhCat/sp-2.png" alt="Tủ quần áo" class="img-fluid">
 						</div>
 						<div class="info">
 							<p class="name"><a href="#"> Tủ quần áo</a> </p>
@@ -329,7 +329,7 @@
 				<div class="row">
 					<div class="col-lg-6">
 						<div class="img h-100">
-							<img src="/user/images/AnhCat/tintuc-0.png" alt="NỘI THẤT HOÀNG HOAN UY TÍN SONG HÀNH CHẤT LƯỢNG"
+							<img src="../user/images/AnhCat/tintuc-0.png" alt="NỘI THẤT HOÀNG HOAN UY TÍN SONG HÀNH CHẤT LƯỢNG"
 								class="w-100 h-100">
 						</div>
 					</div>
@@ -347,10 +347,10 @@
 									xuất đa dạng các sản phẩm với giá cả luôn cạnh tranh.</p>
 							</div>
 							<div>
-								<p><img alt="giới thiệu" src="/user/images/AnhCat/tintuc-1.png">&nbsp;<img alt="giới thiệu"
-										src="/user/images/AnhCat/tintuc-2.png">&nbsp;<img alt="giới thiệu"
-										src="/user/images/AnhCat/tintuc-3.png">&nbsp;<a href="#"><img alt=""
-											src="/user/images/AnhCat/tintuc-4.png"></a></p>
+								<p><img alt="giới thiệu" src="../user/images/AnhCat/tintuc-1.png">&nbsp;<img alt="giới thiệu"
+										src="../user/images/AnhCat/tintuc-2.png">&nbsp;<img alt="giới thiệu"
+										src="../user/images/AnhCat/tintuc-3.png">&nbsp;<a href="#"><img alt=""
+											src="../user/images/AnhCat/tintuc-4.png"></a></p>
 							</div>
 						</div>
 					</div>
@@ -361,7 +361,7 @@
 					<div class="col-md-6">
 						<div class="reason-index-item d-flex">
 							<div class="img">
-								<img src="/user/images/AnhCat/money.png" alt="lý do 1">
+								<img src="../user/images/AnhCat/money.png" alt="lý do 1">
 							</div>
 							<div class="content">
 								<h3 class="title"> Chính sách giá </h3>
@@ -372,7 +372,7 @@
 					<div class="col-md-6">
 						<div class="reason-index-item d-flex">
 							<div class="img">
-								<img src="/user/images/AnhCat/product.png" alt="lý do 1">
+								<img src="../user/images/AnhCat/product.png" alt="lý do 1">
 							</div>
 							<div class="content">
 								<h3 class="title"> Sản xuất </h3>
@@ -383,7 +383,7 @@
 					<div class="col-md-6">
 						<div class="reason-index-item d-flex">
 							<div class="img">
-								<img src="/user/images/AnhCat/medal.png" alt="lý do 1">
+								<img src="../user/images/AnhCat/medal.png" alt="lý do 1">
 							</div>
 							<div class="content">
 								<h3 class="title"> Chất lượng </h3>
@@ -394,7 +394,7 @@
 					<div class="col-md-6">
 						<div class="reason-index-item d-flex">
 							<div class="img">
-								<img src="/user/images/AnhCat/open-24-h.png" alt="lý do 1">
+								<img src="../user/images/AnhCat/open-24-h.png" alt="lý do 1">
 							</div>
 							<div class="content">
 								<h3 class="title"> Bảo hành </h3>
@@ -414,7 +414,7 @@
 					<div class="col-lg-7">
 						<div class="box">
 							<div class="img">
-								<img src="/user/images/AnhCat/tt-0.png"
+								<img src="../user/images/AnhCat/tt-0.png"
 									alt="Cách chọn Sofa cho phòng khách nhà bạn thêm phần sang trọng" class="w-100">
 							</div>
 							<div class="news-content">
@@ -436,7 +436,7 @@
 						<ul>
 							<li class="d-flex">
 								<div class="img">
-									<img src="/user/images/AnhCat/tt-1.png" alt="Trang trí phòng khách cho thêm năng động">
+									<img src="../user/images/AnhCat/tt-1.png" alt="Trang trí phòng khách cho thêm năng động">
 								</div>
 								<div class="content">
 									<p class="title">
@@ -450,7 +450,7 @@
 							</li>
 							<li class="d-flex">
 								<div class="img">
-									<img src="/user/images/AnhCat/tt-2.png"
+									<img src="../user/images/AnhCat/tt-2.png"
 										alt="Cập nhật xu hướng phòng khách phong cách tối giản">
 								</div>
 								<div class="content">
@@ -465,7 +465,7 @@
 							</li>
 							<li class="d-flex">
 								<div class="img">
-									<img src="/user/images/AnhCat/tt-3.png"
+									<img src="../user/images/AnhCat/tt-3.png"
 										alt="Cách sắp xếp vị trí bàn ăn và nhà bếp một cách rộng rãi">
 								</div>
 								<div class="content">
@@ -495,27 +495,27 @@
 				<div class="slide-partner">
 					<div class="ptn-item">
 						<div class="img">
-							<img src="/user/images/vinpearl.png" alt="">
+							<img src="../user/images/vinpearl.png" alt="">
 						</div>
 					</div>
 					<div class="ptn-item">
 						<div class="img">
-							<img src="/user/images/muongthanh.png" alt="">
+							<img src="../user/images/muongthanh.png" alt="">
 						</div>
 					</div>
 					<div class="ptn-item">
 						<div class="img">
-							<img src="/user/images/sheraton.png" alt="">
+							<img src="../user/images/sheraton.png" alt="">
 						</div>
 					</div>
 					<div class="ptn-item">
 						<div class="img">
-							<img src="/user/images/tch.png" alt="">
+							<img src="../user/images/tch.png" alt="">
 						</div>
 					</div>
 					<div class="ptn-item">
 						<div class="img">
-							<img src="/user/images/marvella.png" alt="">
+							<img src="../user/images/marvella.png" alt="">
 						</div>
 					</div>
 				</div>
@@ -551,11 +551,11 @@
 							<span class="line-remove" style="width: 78px; "></span>
 						</h5>
 						<ul>
-							<li><a href="/user/about.html" title="Giới thiệu">Giới thiệu</a></li>
-							<li><a href="/user/product.html" title="Sản phẩm">Sản phẩm</a></li>
-							<li><a href="/user/news.html" title="Tin tức">Tin tức</a></li>
-							<li><a href="/user/partner.html" title="Đối tác">Đối tác</a></li>
-							<li><a href="/user/contact.html" title="Liên hệ">Liên hệ</a></li>
+							<li><a href="../user/about.html" title="Giới thiệu">Giới thiệu</a></li>
+							<li><a href="../user/product.html" title="Sản phẩm">Sản phẩm</a></li>
+							<li><a href="../user/news.html" title="Tin tức">Tin tức</a></li>
+							<li><a href="../user/partner.html" title="Đối tác">Đối tác</a></li>
+							<li><a href="../user/contact.html" title="Liên hệ">Liên hệ</a></li>
 						</ul>
 					</div>
 					<div class="col-md-3">
@@ -588,10 +588,10 @@
 	integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
 	crossorigin="anonymous"></script>
 <!-- JQuery -->
-<script type="text/javascript" src="/user/js/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="/user/js/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="../user/js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="../user/js/jquery-migrate-1.2.1.min.js"></script>
 <!-- Slick -->
-<script type="text/javascript" src="/user/slick/slick/slick.js"></script>
+<script type="text/javascript" src="../user/slick/slick/slick.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -601,6 +601,6 @@
 	crossorigin="anonymous"></script>
 
 <!-- Script -->
-<script type="text/javascript" src="/user/js/javascript.js"></script>
+<script type="text/javascript" src="../user/js/javascript.js"></script>
 
 </html>
