--- a/user/login.html
+++ b/user/login.html
@@ -91,6 +91,7 @@
                   type="password"
                   value=""
                   name="user-password"
+                  class="pass-input"
                   id="user-password"
                   placeholder="Mật khẩu"
                   size="16"
@@ -197,6 +198,7 @@
     <!-- Script -->
     <script type="text/javascript" src="js/javascript.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="test.js"></script>
+    <!-- <script src="test.js"></script> -->
+    <script src="../api/user/login.js"></script>
   </body>
 </html>
