regis and login

--- a/admin/index.html
+++ b/admin/index.html
@@ -1218,7 +1218,8 @@
 
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
-
+    <!-- Check Login -->
+    <script src="../api/admin/loadAdminPage.js"></script>
     <!-- Page JS -->
     <script src="assets/js/dashboards-analytics.js"></script>
 
