--- a/admin/insertTypeProduct.html
+++ b/admin/insertTypeProduct.html
@@ -344,9 +344,9 @@
                       <form>
                         <div class="mb-3">
                           <label class="form-label" for="basic-default-fullname">Product Type Name</label>
-                          <input type="text" class="form-control" id="basic-default-fullname" placeholder="Tên loại sản phẩm" />                        </div>
+                          <input type="text" class="form-control typeName" id="basic-default-fullname" placeholder="Tên loại sản phẩm" />                        </div>
                         
-                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="submit" id="btnAddOrUpdate" class="btn btn-primary">Save</button>
                       </form>
                     </div>
                   </div>
@@ -354,39 +354,6 @@
               </div>
             </div>
             <!-- / Content -->
-
-            <!-- Footer -->
-            <footer class="content-footer footer bg-footer-theme">
-              <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
-                <div class="mb-2 mb-md-0">
-                  ©
-                  <script>
-                    document.write(new Date().getFullYear());
-                  </script>
-                  , made with ❤️ by
-                  <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">ThemeSelection</a>
-                </div>
-                <div>
-                  <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
-                  <a href="https://themeselection.com/" target="_blank" class="footer-link me-4">More Themes</a>
-
-                  <a
-                    href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >Documentation</a
-                  >
-
-                  <a
-                    href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >Support</a
-                  >
-                </div>
-              </div>
-            </footer>
-            <!-- / Footer -->
 
             <div class="content-backdrop fade"></div>
           </div>
@@ -417,7 +384,11 @@
     <!-- Main JS -->
     <script src="assets/js/main.js"></script>
 
-    <!-- Page JS -->
+        <!-- Check Login -->
+        <script src="../api/admin/loadAdminPage.js"></script>
+        <!-- API ADD OR UPDATE -->
+        <script src="../api/product/insertTypeProduct.js"></script>
+        <!-- Page JS -->
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
