--- a/admin/listUser.html
+++ b/admin/listUser.html
@@ -798,6 +798,9 @@
 
     <!-- Vendors JS -->
 
+    <!-- Check Login -->
+    <script src="../api/admin/loadAdminPage.js"></script>
+
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
 
