--- a/user/user-profile.html
+++ b/user/user-profile.html
@@ -1,22 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="light-style layout-menu-fixed" dir="ltr" data-theme="theme-default" data-assets-path="assets/"
+    data-template="vertical-menu-template-free">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- CSS -->
+    <meta charset="utf-8">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+
+    <title>
+        Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+    </title>
+
+    <meta name="description" content="" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../logo.png" />
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=US0ty3zmbJS8d8mneqriLbj14gtOFhOeQx2R9N_HdgZ94ZTa1pPCJY5wMBO18y60rNHQDpp9mcKLMEf17-4IPNWxkHR4qfP858wXXuXN8TobPUj6Uk4vQtYrgj6uaV6Hk61eEy0yV4JSqnWexw2SVg" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly9jZG4uZGlzY29yZGFwcC5jb20vYXR0YWNobWVudHMvODk2MDMxMjAzMjQzNzQ5Mzk3Lzk4MTIzOTEwMDE0NzM4MDI3NC91c2VyLXByb2ZpbGUuaHRtbA"/><script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-storage.js"></script>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
+
+    <!-- Icons. Uncomment required icon fonts -->
+    <link rel="stylesheet" href="../admin/assets/vendor/fonts/boxicons.css" />
+
+    <!-- Core CSS -->
+    <link rel="stylesheet" href="../admin/assets/vendor/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="../admin/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="../admin/assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="css/global.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
-    <link rel="icon" href="images/AnhCat/logo.png" type="image/png">
-    <title>HT Houseware</title>
+    <!-- Vendors CSS -->
+    <link rel="stylesheet" href="../admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+
+    <!-- Page CSS -->
+
+    <!-- Helpers -->
+    <script src="../admin/assets/vendor/js/helpers.js"></script>
+
+    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+    <script src="../admin/assets/js/config.js"></script>
+</head>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+
+    <title>
+        Vertical Layouts - Forms | Sneat - Bootstrap 5 HTML Admin Template - Pro
+    </title>
+
+    <meta name="description" content="" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon/favicon.ico" />
+    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.8/firebase-storage.js"></script>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet" />
+
+    <!-- Icons. Uncomment required icon fonts -->
+    <link rel="stylesheet" href="assets/vendor/fonts/boxicons.css" />
+
+    <!-- Core CSS -->
+    <link rel="stylesheet" href="assets/vendor/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="assets/css/demo.css" />
+
+    <!-- Vendors CSS -->
+    <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+
+    <!-- Page CSS -->
+
+    <!-- Helpers -->
+    <script src="assets/vendor/js/helpers.js"></script>
+
+    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
+    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
+    <script src="assets/js/config.js"></script>
 </head>
 
 <body>
@@ -55,81 +129,50 @@
             <h1>Tài khoản của bạn </h1>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-3 sidebar-account">
-                    <div class="AccountSidebar">
-                        <h3 class="AccountTitle titleSidebar">Tài khoản</h3>
-                        <div class="AccountList">
-                            <ul class="list-unstyled">
-                                <li class="current"><a href=""><i class="far fa-dot-circle"></i>Thông tin tài khoản</a>
-                                </li>
-                                <li><a href=""> <i class="far fa-dot-circle"></i>Danh sách địa chỉ</a></li>
-                                <li><a href=""><i class="far fa-dot-circle"></i>Đăng xuất</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xs-12 col-sm-9">
-                    <div class="row">
-                        <div class="col-xs-12" id="customer_sidebar">
-                            <p class="title-detail">Thông tin tài khoản</p>
-
-                            <h2 class="name_account">Đoàn Trà My</h2>
-
-
-                            <p class="email ">pbe.dontcry.dd@gmail.com</p>
-                            <div class="address ">
-
-                                <p>402 E2</p>
-
-                                <p></p>
-
-                                <p> Vietnam</p>
-                                <p>841633569399</p>
-
-                                <a id="view_address" href="">Xem địa chỉ</a>
+            <div class="col-xls">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <form>
+                            <div class="mb-3">
+                                <label class="form-label" for="basic-default-fullname">Product Name</label>
+                                <input type="text" name="name" class="form-control" id="basic-default-fullname"
+                                    placeholder="Tên sản phẩm" />
                             </div>
-                        </div>
-
-                        <div class="col-xs-12 customer-table-wrap" id="customer_orders">
-                            <div class="customer_order customer-table-bg">
-
-                                <p class="title-detail">
-                                    Danh sách đơn hàng mới nhất
-                                </p>
-                                <div class="table-responsive">
-                                    <table class="table">
-                                        <thead>
-                                            <tr>
-                                                <th class="order_number text-center">Mã đơn hàng</th>
-                                                <th class="date text-center">Ngày đặt</th>
-                                                <th class="total text-right">Thành tiền</th>
-                                                <th class="payment_status text-center">Trạng thái thanh toán</th>
-                                                <th class="fulfillment_status text-center">Vận chuyển</th>
-
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-
-                                            <tr class="odd cancelled_order">
-                                                <td class="text-center"><a href="" title="">#1000001233</a></td>
-
-                                                <td class="text-center"><span>03/04/2019</span></td>
-                                                <td class="text-right"><span class="total money">1,100,000 vnđ</span>
-                                                </td>
-                                                <td class="text-center"><span class="status_pending">pending</span></td>
-                                                <td class="text-center"><span class="status_not fulfilled">not
-                                                        fulfilled</span></td>
-
-                                            </tr>
-
-                                        </tbody>
-                                    </table>
-                                </div>
-
+                            <div class="mb-3">
+                                <label class="form-label" for="basic-default-company">Product
+                                    Description</label>
+                                <input type="text" name="description" class="form-control" id="basic-default-company"
+                                    placeholder="Mô tả về sản phẩm" />
                             </div>
-                        </div>
+                            <div class="mb-3">
+                                <label for="defaultSelect" class="form-label">Status</label>
+                                <select id="defaultSelect" name="status" class="form-select">
+                                    <option>Default select</option>
+                                    <option value="1">Còn Hàng</option>
+                                    <option value="0">Ngưng sản xuất</option>
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="defaultSelect" class="form-label">Price</label>
+                                <input class="form-control" type="number" name="price" value="100000"
+                                    id="html5-number-input" />
+                            </div>
+                            <div class="mb-3">
+                                <label for="defaultSelect" class="form-label">Type Product</label>
+                                <select id="typeProduct" name="type" class="form-select">
+                                </select>
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFile" class="form-label">Product Image</label>
+                                <input class="form-control" type="file" name="image" id="image" />
+                            </div>
+                            <button type="submit" id="btnAddOrUpdate" class="btn btn-primary">
+                                Save
+                            </button>
+                            <button type="button" id="btnLogout" class="btn btn-primary">
+                                Log Out
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -208,6 +251,9 @@
 
     <!-- Script -->
     <script type="text/javascript" src="js/javascript.js"></script>
+
+
+    <script type="text/javascript" src="../api/user/logout.js"></script>
 </body>
 
 </html>
