--- a/admin/listOrders.html
+++ b/admin/listOrders.html
@@ -799,6 +799,9 @@
 
     <!-- Vendors JS -->
 
+        <!-- Check Login -->
+        <script src="../api/admin/loadAdminPage.js"></script>
+
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
 
