--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </a>
           </div>
           <div class="category-item">
-            <a href="#">
+            <a href="/user/product.html">
               <div class="category-img">
                 <img
                   src="user/images/AnhCat/phong-bep.png"
@@ -708,7 +708,8 @@
       </footer>
     </div>
   </body>
-
+  
+  <script type="text/javascript" src="api/product/getAllProduct.js"></script>
   <!-- Font Awesome -->
   <script
     src="https://kit.fontawesome.com/bf61fecb7c.js"
@@ -742,7 +743,6 @@
 
   <!-- Script -->
   <script type="text/javascript" src="user/js/javascript.js"></script>
-  <script type="text/javascript" src="api/product/getAllProduct.js"></script>
 
   <script type="text/javascript" src="test.js"></script>
   <script type="text/javascript" src="api/loadData.js"></script>
