--- a/admin/listOrders.html
+++ b/admin/listOrders.html
@@ -5,7 +5,7 @@
   class="light-style layout-menu-fixed"
   dir="ltr"
   data-theme="theme-default"
-  data-assets-path="../assets/"
+  data-assets-path="assets/"
   data-template="vertical-menu-template-free"
 >
   <head>
@@ -25,7 +25,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../assets/img/favicon/favicon.ico"
+      href="assets/img/favicon/favicon.ico"
     />
 
     <!-- Fonts -->
@@ -37,35 +37,35 @@
     />
 
     <!-- Icons. Uncomment required icon fonts -->
-    <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
+    <link rel="stylesheet" href="assets/vendor/fonts/boxicons.css" />
 
     <!-- Core CSS -->
     <link
       rel="stylesheet"
-      href="../assets/vendor/css/core.css"
+      href="assets/vendor/css/core.css"
       class="template-customizer-core-css"
     />
     <link
       rel="stylesheet"
-      href="../assets/vendor/css/theme-default.css"
+      href="assets/vendor/css/theme-default.css"
       class="template-customizer-theme-css"
     />
-    <link rel="stylesheet" href="../assets/css/demo.css" />
+    <link rel="stylesheet" href="assets/css/demo.css" />
 
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
-      href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+      href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
 
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="../assets/vendor/js/helpers.js"></script>
+    <script src="assets/vendor/js/helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../assets/js/config.js"></script>
+    <script src="assets/js/config.js"></script>
   </head>
 
   <body>
@@ -261,33 +261,10 @@
               class="navbar-nav-right d-flex align-items-center"
               id="navbar-collapse"
             >
-              <!-- Search -->
-              <div class="navbar-nav align-items-center">
-                <div class="nav-item d-flex align-items-center">
-                  <i class="bx bx-search fs-4 lh-0"></i>
-                  <input
-                    type="text"
-                    class="form-control border-0 shadow-none"
-                    placeholder="Search..."
-                    aria-label="Search..."
-                  />
-                </div>
-              </div>
-              <!-- /Search -->
+              
 
               <ul class="navbar-nav flex-row align-items-center ms-auto">
-                <!-- Place this tag where you want the button to render. -->
-                <li class="nav-item lh-1 me-3">
-                  <a
-                    class="github-button"
-                    href="https://github.com/themeselection/sneat-html-admin-template-free"
-                    data-icon="octicon-star"
-                    data-size="large"
-                    data-show-count="true"
-                    aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
-                    >Star</a
-                  >
-                </li>
+                
 
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
@@ -298,7 +275,7 @@
                   >
                     <div class="avatar avatar-online">
                       <img
-                        src="../assets/img/avatars/1.png"
+                        src="assets/img/avatars/man-300x300.png"
                         alt
                         class="w-px-40 h-auto rounded-circle"
                       />
@@ -311,14 +288,13 @@
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
                               <img
-                                src="../assets/img/avatars/1.png"
+                                src="assets/img/avatars/man-300x300.png"
                                 alt
                                 class="w-px-40 h-auto rounded-circle"
                               />
                             </div>
                           </div>
                           <div class="flex-grow-1">
-                            <span class="fw-semibold d-block">John Doe</span>
                             <small class="text-muted">Admin</small>
                           </div>
                         </div>
@@ -334,30 +310,12 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">
-                        <i class="bx bx-cog me-2"></i>
-                        <span class="align-middle">Settings</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">
-                        <span class="d-flex align-items-center align-middle">
-                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                          <span class="flex-grow-1 align-middle">Billing</span>
-                          <span
-                            class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20"
-                            >4</span
-                          >
-                        </span>
-                      </a>
-                    </li>
-                    <li>
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="auth-login-basic.html">
+                      <a class="dropdown-item" id="btnLogout">
                         <i class="bx bx-power-off me-2"></i>
-                        <span class="align-middle">Log Out</span>
+                        <span class="align-middle" >Log Out</span>
                       </a>
                     </li>
                   </ul>
@@ -411,7 +369,7 @@
                               title="Lilian Fuller"
                             >
                               <img
-                                src="../assets/img/avatars/5.png"
+                                src="assets/img/avatars/5.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -424,7 +382,7 @@
                               title="Sophia Wilkerson"
                             >
                               <img
-                                src="../assets/img/avatars/6.png"
+                                src="assets/img/avatars/6.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -437,7 +395,7 @@
                               title="Christina Parker"
                             >
                               <img
-                                src="../assets/img/avatars/7.png"
+                                src="assets/img/avatars/7.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -491,7 +449,7 @@
                               title="Lilian Fuller"
                             >
                               <img
-                                src="../assets/img/avatars/5.png"
+                                src="assets/img/avatars/5.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -504,7 +462,7 @@
                               title="Sophia Wilkerson"
                             >
                               <img
-                                src="../assets/img/avatars/6.png"
+                                src="assets/img/avatars/6.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -517,7 +475,7 @@
                               title="Christina Parker"
                             >
                               <img
-                                src="../assets/img/avatars/7.png"
+                                src="assets/img/avatars/7.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -571,7 +529,7 @@
                               title="Lilian Fuller"
                             >
                               <img
-                                src="../assets/img/avatars/5.png"
+                                src="assets/img/avatars/5.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -584,7 +542,7 @@
                               title="Sophia Wilkerson"
                             >
                               <img
-                                src="../assets/img/avatars/6.png"
+                                src="assets/img/avatars/6.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -597,7 +555,7 @@
                               title="Christina Parker"
                             >
                               <img
-                                src="../assets/img/avatars/7.png"
+                                src="assets/img/avatars/7.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -653,7 +611,7 @@
                               title="Lilian Fuller"
                             >
                               <img
-                                src="../assets/img/avatars/5.png"
+                                src="assets/img/avatars/5.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -666,7 +624,7 @@
                               title="Sophia Wilkerson"
                             >
                               <img
-                                src="../assets/img/avatars/6.png"
+                                src="assets/img/avatars/6.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -679,7 +637,7 @@
                               title="Christina Parker"
                             >
                               <img
-                                src="../assets/img/avatars/7.png"
+                                src="assets/img/avatars/7.png"
                                 alt="Avatar"
                                 class="rounded-circle"
                               />
@@ -725,56 +683,6 @@
 
             <!-- / Content -->
 
-            <!-- Footer -->
-            <footer class="content-footer footer bg-footer-theme">
-              <div
-                class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column"
-              >
-                <div class="mb-2 mb-md-0">
-                  ©
-                  <script>
-                    document.write(new Date().getFullYear());
-                  </script>
-                  , made with ❤️ by
-                  <a
-                    href="https://themeselection.com"
-                    target="_blank"
-                    class="footer-link fw-bolder"
-                    >ThemeSelection</a
-                  >
-                </div>
-                <div>
-                  <a
-                    href="https://themeselection.com/license/"
-                    class="footer-link me-4"
-                    target="_blank"
-                    >License</a
-                  >
-                  <a
-                    href="https://themeselection.com/"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >More Themes</a
-                  >
-
-                  <a
-                    href="https://themeselection.com/demo/sneat-bootstrap-html-admin-template/documentation/"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >Documentation</a
-                  >
-
-                  <a
-                    href="https://github.com/themeselection/sneat-html-admin-template-free/issues"
-                    target="_blank"
-                    class="footer-link me-4"
-                    >Support</a
-                  >
-                </div>
-              </div>
-            </footer>
-            <!-- / Footer -->
-
             <div class="content-backdrop fade"></div>
           </div>
           <!-- Content wrapper -->
@@ -789,12 +697,12 @@
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../assets/vendor/js/bootstrap.js"></script>
-    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="assets/vendor/libs/popper/popper.js"></script>
+    <script src="assets/vendor/js/bootstrap.js"></script>
+    <script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
 
-    <script src="../assets/vendor/js/menu.js"></script>
+    <script src="assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
@@ -803,7 +711,7 @@
         <script src="../api/admin/loadAdminPage.js"></script>
 
     <!-- Main JS -->
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Page JS -->
 
