--- a/user/detail.html
+++ b/user/detail.html
@@ -106,7 +106,9 @@
 						</div>
 						<div class="certify d-flex align-items-center">
 							<i class="fas fa-shield-alt mr-2"></i>
-							<p>Bảo hành sản phẩm lên đến 12 tháng</p>
+							<button type="button" style="margin-left:auto; margin-right:auto">
+								<a class="btnOrder">Đặt Hàng</a>
+							</button>
 						</div>
 					</div>
 				</div>
